--- a/TCPClient/TCPClient.vcxproj.filters
+++ b/TCPClient/TCPClient.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="TCPClient_CloseOnTransfer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ThreadTCPClient.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
