--- a/TCPServer/TCPServer.vcxproj.filters
+++ b/TCPServer/TCPServer.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="ThreadTCPServer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TCPServer_MultiThread.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
