--- a/UDPClient/UDPClient.vcxproj.filters
+++ b/UDPClient/UDPClient.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClCompile Include="UDPClient.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="UDPClient1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="BroadcastSender.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
