--- a/UDPServer/UDPServer.vcxproj.filters
+++ b/UDPServer/UDPServer.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClCompile Include="UDPServer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="UDPServer1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="BroadcastReceiver.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
