--- a/UDPClient/UDPClient.vcxproj.filters
+++ b/UDPClient/UDPClient.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="BroadcastSender.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="MulticastSender.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
