--- a/UDPServer/UDPServer.vcxproj.filters
+++ b/UDPServer/UDPServer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="BroadcastReceiver.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="MulticastReceiver.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
