--- a/TCPServer/TCPServer.vcxproj.filters
+++ b/TCPServer/TCPServer.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="TCPServer_MultiThread.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TCPServer_Nonblock.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TCPServer_SelecModel.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
