--- a/GUITCPServer/GUITCPServer.vcxproj.filters
+++ b/GUITCPServer/GUITCPServer.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="GUITCPServer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="GUITCPServer_CompletionPort.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
