--- a/BtnDevSearch/BtnDevSearch.vcxproj.filters
+++ b/BtnDevSearch/BtnDevSearch.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="BtnDevSearch.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TestTCP.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h">
